# Claw-Channel-Feishu-Rust

./: .gitignore  .releaserc.yml  CHANGELOG.md  CHANGELOG.zh.md  Cargo.toml  QUICK-INSTALL.md  README.md  README_CN.md  SECURITY.md
crates/clawrs-feishu/: Cargo.toml
crates/clawrs-feishu/examples/: send_message.rs
crates/clawrs-feishu/src/: capability.rs  channel.rs  compose.rs  lib.rs
crates/clawrs-feishu/src/channel/: filter.rs
crates/clawrs-feishu/tests/: live_api_test.rs
crates/feishu-domain/: Cargo.toml
crates/feishu-domain/benches/: codec.rs  security.rs
crates/feishu-domain/src/: codec.rs  config.rs  error.rs  lib.rs
crates/feishu-domain/src/model/: event.rs  message.rs  mod.rs
crates/feishu-domain/src/port/: auth.rs  bot.rs  event.rs  im.rs  mod.rs
crates/feishu-domain/src/security/: guard.rs  mod.rs  policy.rs
crates/feishu-kernel/: Cargo.toml
crates/feishu-kernel/src/: capability.rs  event_bus.rs  kernel.rs  lib.rs
crates/feishu-platform/: Cargo.toml
crates/feishu-platform/src/: auth.rs  bot.rs  event.rs  im.rs  lib.rs  webhook.rs
docs/: design-spec.md
e2e/: .gitignore  QUICKSTART.md  SCRIPTS.md  STRUCTURE.md  TEST-SUITE-SUMMARY.txt  bruno.json  package-lock.json  package.json  run-tests.sh  verify-suite.sh
e2e/01-auth/: 01-get-token.bru  02-token-refresh.bru  03-invalid-credentials.bru
e2e/02-health/: 01-bot-info.bru  02-health-check.bru  03-bot-permissions.bru
e2e/03-messages/: 01-send-text.bru  02-receive-text.bru  03-group-mention.bru  04-multi-mention.bru  05-performance.bru  06-error-handling.bru  07-send-unicode.bru  08-invalid-chat-id.bru  09-send-post-message.bru  11-media-unsupported.bru  12-send-post-variants.bru
e2e/03-messages/13-send-then-list/: 01-send.bru  02-list.bru
e2e/04-security/: 01-allowlist-allow.bru  02-allowlist-deny.bru  03-wildcard.bru  04-empty-allowlist.bru  05-group-allowlist.bru
e2e/05-websocket/: 01-ws-endpoint.bru  02-connection-signal-timing.bru  03-ws-message-flow.js  04-validate-event-fixtures.js  README.md
e2e/05-websocket/fixtures/: im-message-audio.json  im-message-file.json  im-message-image.json  im-message-post-markdown.json  im-message-post-mixed.json  im-message-post.json  im-message-text.json  im-message-with-mention.json
e2e/06-zeroclaw/: 01-gateway-health.bru  02-webhook.bru
e2e/07-open-lark/: 01-token-via-sdk.bru  02-im-send-message.bru  03-bot-info-direct.bru  04-ws-endpoint-sdk.bru  05-send-zeroclaw-greeting.bru  06-concurrent-token-reuse.bru
e2e/08-edge-cases/: 01-empty-message.bru  02-long-message.bru  03-duplicate-send.bru  04-expired-token.bru  05-missing-fields.bru
e2e/08-openclaw/: 01-gateway-health.bru  02-webhook.bru  03-clawrs-feishu-status.sh  04-channels-status-probe.sh  05-clawrs-feishu-account-main.sh  06-list-accounts.sh  07-webhook-mode.bru
e2e/environments/: dev.bru  test.bru
