[workspace]
resolver = "2"
members = [
    "crates/feishu-domain",
    "crates/feishu-kernel",
    "crates/feishu-platform",
    "crates/clawrs-feishu",
    "packages/clawrs-feishu-node",
]

[workspace.package]
version = "1.3.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1.42", default-features = false }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Feishu SDK (each adapter crate pulls only the features it needs)
open-lark = { version = "0.14", default-features = false }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
feishu-domain   = { path = "crates/feishu-domain" }
feishu-kernel  = { path = "crates/feishu-kernel" }
feishu-platform = { path = "crates/feishu-platform" }

# Patch open-lark to fix nullable user_id in event deserialization
# (Feishu sends user_id: null when app lacks contact:user.id:readonly permission)
[patch.crates-io]
open-lark = { path = "vendor/open-lark" }
